--- a/styles.css
+++ b/styles.css
@@ -15,3 +15,6 @@ p {
   margin: 50px auto;
   font: 30px Monaco,"Courier New","DejaVu Sans Mono","Bitstream Vera Sans Mono",monospace;
 }
+.hello{
+width:100%; height: 500px; background:#ff0000;
+}
